# ticsauth

./: .editorconfig  .gitignore  AUTHORS.md  COPYING.md  ChangeLog.md  Makefile.am  NEWS.md  README.md  TODO.md  acinclude.m4  autogen.sh  configure.ac
build-aux/: git-tar-name.txt
doc/standards/: standards.txt
examples/: decode-string.c  encode-string.c  hash-incremental.c  hash-stream.c  hash-string.c  hmac-incremental.c  hmac-stream.c  hmac-string.c  makefile-examples.am
include/: ticsauth.h  ticsauth_noinst.h
lib/libticsauth/: lencoding.c  lhash-crc32.c  lhash-crc32.h  lhash-md5.c  lhash-md5.h  lhash-sha1.c  lhash-sha1.h  lhash-sha256.c  lhash-sha256.h  lhash-sha512.c  lhash-sha512.h  lhash.c  lhash.h  lhmac.c  lhmac.h  libticsauth.h  libticsauth.sym  lmisc.c
tests/: README.md  data-base16.c  data-base32.c  data-base32hex.c  data-base64.c  data-crc32.c  data-md5.c  data-sha1.c  data-sha224.c  data-sha256.c  data-sha384.c  data-sha512.c  hash-tests-data.c  makefile-basexx.am  makefile-hash.am  makefile-hmac.am  makefile-xbasexx.am  makefile-xhash.am  makefile-xhmac.am  proofofconcept.c  test-basexx.c  test-hash.c  test-hmac.c  tests.h  xtest-basexx.c  xtest-hash.c  xtest-hmac.c
tics-authenticator.xcodeproj/: project.pbxproj
tics-authenticator.xcodeproj/xcshareddata/xcschemes/: All Targets.xcscheme  example-decode-string.xcscheme  example-encode-string.xcscheme  example-hash-stream.xcscheme  example-hmac-string.xcscheme  test-basexx.xcscheme  test-hash.xcscheme  test-hmac.xcscheme  ticsauth.xcscheme  xtest-hash.xcscheme  xtest-hmac.xcscheme
